--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,7 @@
     <!-- Here Navbar Starts -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!-- <div class="container-fluid"> -->
-        <a class="navbar-brand" href="#"><img src="./image/Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
+        <a class="navbar-brand" href="#"><img src="Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
