--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <!-- Here Navbar Starts -->
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
       <!-- <div class="container-fluid"> -->
-        <a class="navbar-brand" href="#"><img src="./image/Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
+        <a class="navbar-brand" href="#"><img src="Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -87,7 +87,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="image/h1.jpg" class="d-block w-100" alt="...">
+            <img src="h1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <!-- <h2>Welcome to E- Lane</h2> -->
               <h1 style="font-size:4rem; color: yellow; font-family: Brush Script MT, Brush Script Std, cursive ;" id="fff" >Welcome to E- Lane</h1>
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="image/h2.jpg" class="d-block w-100" alt="...">
+            <img src="h2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <!-- <h2>Men's Wearhouse</h2> -->
               <h1 style="font-size:4rem; color: rgb(15, 134, 194); font-family: Brush Script MT, Brush Script Std, cursive ;" id="fff"  >Gentlemen's Style</h1>
@@ -111,7 +111,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="image/h3.jpg" class="d-block w-100" alt="...">
+            <img src="h3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <!-- <h2>Women's Occasionwear</h2> -->
               <h1 style="font-size:4rem; color: pink; font-family: Brush Script MT, Brush Script Std, cursive ;" id="fff"  >Women's Pride</h1>
@@ -150,7 +150,7 @@
               <p class="card-text mb-auto">Men's coats are versatile and essential to any wardrobe, offering style and functionality. These outfits come in various styles, materials, and designs to suit different occasions and weather conditions.</p>
               <a href="./men.html" class="stretched-link">Click Here For Item Like This</a>
             </div>
-            <img class="bd-placeholder-img" width="200" height="250"  src="image/m7.jpg" alt="" class="src">
+            <img class="bd-placeholder-img" width="200" height="250"  src="m7.jpg" alt="" class="src">
           </div>
         </div>
         <div class="col-md-6">
@@ -165,7 +165,7 @@
             <!-- <div class="col-auto d-none d-lg-block">
               <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             </div> -->
-            <img class="bd-placeholder-img" width="200" height="250"  src="image/w3.jpg" alt="" class="src">
+            <img class="bd-placeholder-img" width="200" height="250"  src="w3.jpg" alt="" class="src">
           </div>
         </div>
       </div>
@@ -179,7 +179,7 @@
               <p class="card-text mb-auto">Are you looking for suitable men's apparel for your wardrobe? If yes, you can explore an extensive collection of shirts online. These can be paired with jeans or shorts for a casual appearance and with a blazer for a formal occasion.</p>
               <!-- <a href="#" class="stretched-link">Continue reading</a> -->
             </div>
-            <img class="bd-placeholder-img" width="200" height="250"  src="image/m8.jpg" alt="" class="src">
+            <img class="bd-placeholder-img" width="200" height="250"  src="m8.jpg" alt="" class="src">
           </div>
         </div>
         <div class="col-md-6">
@@ -194,7 +194,7 @@
             <!-- <div class="col-auto d-none d-lg-block">
               <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             </div> -->
-            <img class="bd-placeholder-img" width="200" height="250"  src="image/w4.jpg" alt="" class="src">
+            <img class="bd-placeholder-img" width="200" height="250"  src="w4.jpg" alt="" class="src">
           </div>
         </div>
       </div>
@@ -212,7 +212,7 @@
       
         <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="widget subscribe no-box">
-      <h5 class="widget-title">E-Lane<span></span>    <a class="navbar-brand" href="#"><img src="./image/Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
+      <h5 class="widget-title">E-Lane<span></span>    <a class="navbar-brand" href="#"><img src="Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
       </h5>
   
       <p>🌟 Elevate Your Wardrobe with Fashion Finesse! 🌟</p>
