--- a/men.html
+++ b/men.html
@@ -672,7 +672,7 @@ a>.block {
     <!-- Here Navbar Starts -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!-- <div class="container-fluid"> -->
-        <a class="navbar-brand" href="#"><img src="./image/Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
+        <a class="navbar-brand" href="#"><img src="Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -734,7 +734,7 @@ a>.block {
                   <div class="block product no-border z-depth-2-top z-depth-2--hover">
                       <div class="block-image">
                           <a href="#">
-                              <img src="image/m3.jpg" class="img-center">
+                              <img src="m3.jpg" class="img-center">
                           </a>
                           <span class="product-ribbon product-ribbon-right product-ribbon--style-1 bg-blue text-uppercase">New</span>
                       </div>
@@ -782,7 +782,7 @@ a>.block {
                   <div class="block product no-border z-depth-2-top z-depth-2--hover">
                       <div class="block-image">
                           <a href="#">
-                              <img src="image/m4.jpg" class="img-center">
+                              <img src="m4.jpg" class="img-center">
                           </a>
                           <span class="product-ribbon product-ribbon-right product-ribbon--style-1 bg-blue text-uppercase">New</span>
                       </div>
@@ -862,7 +862,7 @@ a>.block {
                   </div>
               </div>
               <div class="row p-2 bg-white border rounded mt-2">
-                  <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="image/m6.jpg"></div>
+                  <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="m6.jpg"></div>
                   <div class="col-md-6 mt-1">
                       <h5>Jeans</h5>
                       <div class="d-flex flex-row">
@@ -884,7 +884,7 @@ a>.block {
                   </div>
               </div>
               <div class="row p-2 bg-white border rounded mt-2">
-                  <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="image/m7.jpg"></div>
+                  <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="m7.jpg"></div>
                   <div class="col-md-6 mt-1">
                       <h5>Stylish Coats</h5>
                       <div class="d-flex flex-row">
@@ -908,7 +908,7 @@ a>.block {
                   </div>
               </div>
               <div class="row p-2 bg-white border rounded mt-2">
-                  <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="image/m2.jpg"></div>
+                  <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="m2.jpg"></div>
                   <div class="col-md-6 mt-1">
                       <h5>Bumchums</h5>
                       <div class="d-flex flex-row">
