--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <!-- Here Navbar Starts -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!-- <div class="container-fluid"> -->
-        <a class="navbar-brand" href="#"><img src="./image/Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
+        <a class="navbar-brand" href="#"><img src="Lane.png" alt="Logo" srcset="" style="height: 60px; width: 130px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,7 +49,7 @@
             </li>
            
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/contact.html">CONTACT US</a>
+              <a class="nav-link active" aria-current="page" href="./contact.html">CONTACT US</a>
             </li>
           </ul>
           <form class="d-flex ms-auto">
