--- a/men.html
+++ b/men.html
@@ -837,7 +837,7 @@ a>.block {
       <div class="d-flex justify-content-center row">
           <div class="col-md-10">
               <div class="row p-2 bg-white border rounded">
-                  <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="image/m5.jpg"></div>
+                  <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="m5.jpg"></div>
                   <div class="col-md-6 mt-1">
                       <h5>Shirts </h5>
                       <div class="d-flex flex-row">
