--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </li>
            
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="/contact.html">CONTACT US</a>
+              <a class="nav-link " aria-current="page" href="./contact.html">CONTACT US</a>
             </li>
           </ul>
           <form class="d-flex ms-auto">
@@ -63,10 +63,10 @@
           </form>
           
           <div class="ms-2">
-            <button class="btn btn-danger card bg-dark text-light  " data-toggle="modal" data-target="#loginModal"><a  href="/cart.html"><i class="bi bi-cart3 "></i></a></button>
+            <button class="btn btn-danger card bg-dark text-light  " data-toggle="modal" data-target="#loginModal"><a  href="./cart.html"><i class="bi bi-cart3 "></i></a></button>
           </div>
           <div class="ms-2">
-            <button class="btn btn-danger card bg-dark text-light " data-toggle="modal" data-target="#signupModal"><a  href="/login.html"><i class="bi bi-person"></a></i></button>
+            <button class="btn btn-danger card bg-dark text-light " data-toggle="modal" data-target="#signupModal"><a  href="./login.html"><i class="bi bi-person"></a></i></button>
           </div> 
         </div>
       </div>
