--- a/cart.html
+++ b/cart.html
@@ -70,6 +70,8 @@
 
     <!-- Here Navbar Ends -->
 
+    <h1><center>Your Cart is Empty!</center></h1>
+
    <!-- Here Footer Starts -->
    <footer id="footer" class="footer-1">
     <div class="main-footer widgets-dark typo-light">
