--- a/login.html
+++ b/login.html
@@ -118,7 +118,7 @@
                 <div class="pt-1 mb-4">
                     <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
                   </div>
-                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/register.html
+                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="./register.html
                           "
                             style="color: #393f81;">Register here</a></p>
               </form>
