--- a/login.html
+++ b/login.html
@@ -36,15 +36,15 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="./index.html">MEN</a>
+              <a class="nav-link " aria-current="page" href="./men.html">MEN</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="./index.html">WOMEN</a>
+              <a class="nav-link " aria-current="page" href="./women.html">WOMEN</a>
             </li>
            
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="/contact.html">CONTACT US</a>
+              <a class="nav-link " aria-current="page" href="./contact.html">CONTACT US</a>
             </li>
           </ul>
           <form class="d-flex ms-auto">
