--- a/women.html
+++ b/women.html
@@ -59,10 +59,10 @@
             <i class="bi bi-person"></i>
           </div> -->
           <div class="ms-2">
-            <button class="btn btn-danger card bg-dark text-light " data-toggle="modal" data-target="#loginModal"><a  href="/cart.html"><i class="bi bi-cart3"></i></a></button>
+            <button class="btn btn-danger card bg-dark text-light " data-toggle="modal" data-target="#loginModal"><a  href="./cart.html"><i class="bi bi-cart3"></i></a></button>
           </div>
           <div class="ms-2">
-            <button class="btn btn-danger card bg-dark text-light " data-toggle="modal" data-target="#signupModal"><a  href="/login.html"><i class="bi bi-person"></a></i></button>
+            <button class="btn btn-danger card bg-dark text-light " data-toggle="modal" data-target="#signupModal"><a  href="./login.html"><i class="bi bi-person"></a></i></button>
           </div> 
         </div>
       </div>
